data/derived/fa15/progs/unify/prog0721.ml.out
Characters 28-66:
  let fixpoint (f,b) = wwhile (fun x -> let b = f b in (b, b!=b) ,b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
